1998-10-07  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* diff.c (diff): Set variables to NULL at the start, and free
	memory at the end.
	* sanity.sh (multiroot2): Add tests for this (before the fix,
	multiroot2-12 would abort with "no more than two revisions/dates
	can be specified").

1998-10-06  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* Makefile.in (installcheck check): Remove references to RCSBIN;
	they don't do anything now that RCSBIN is ignored.

	* client.c: Clean up horrible confusion about whether stored_mode
	or stored_mode_valid (or nothing :-)) indicates whether
	stored_mode is allocated.  Should fix crashes (for example, on NT
	when the server has renamed multiple files from uppercase to
	lowercase).

	* sanity.sh (dirs): New tests, tests for some cases involving
	admins who do surgery on the repository.

1998-10-03  Johannes Stezenbach <johannes.stezenbach@propack-data.de>

	* vers_ts.c (Version_TS): If UTIME_EXPECTS_WRITABLE, if
	necessary change the file to be writable temporarily to set its
	modification time.

1998-10-03  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* client.c (handle_error): Add comment about indicating which
	errors are from the server.

1998-10-01  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (devcom-180): Allow one digit day.

1998-09-30  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* main.c (main): Don't call Name_Root if -d specified.
	* recurse.c (do_recursion, do_dir_proc): Don't check CVS/Root
	if -d was specified.
	* import.c (import): Indentation fix.
	* sanity.sh (multiroot): Update for this change.
	(reposmv): New test, tests for this.

1998-09-28  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (multiroot2): New test, tests some nested directory
	cases.

1998-09-25  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (multiroot): Change a few comments which said modules
	when they meant directories.

1998-09-25  Jim Meyering  <meyering@ascend.com>
