@@ -118,6 +118,11 @@ void wrap_setup()
     /* Then add entries found in home dir, (if user has one) and file
        exists.  */
     homedir = get_homedir ();
+    /* If we can't find a home directory, ignore ~/.cvswrappers.  This may
+       make tracking down problems a bit of a pain, but on the other
+       hand it might be obnoxious to complain when CVS will function
+       just fine without .cvswrappers (and many users won't even know what
+       .cvswrappers is).  */
     if (homedir != NULL)
     {
 	char *file;
